--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-a<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" >
 <head>
   <meta charset="UTF-8" />
@@ -97,7 +97,10 @@ a<!DOCTYPE html>
             <a class="nav-link" href="about,html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="cakes.html">Cakes</a>
+            <a class="nav-link" href="cakes.html">Our Cakes</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" href="classes.html">Baking Class</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="contact.html">Contact Us</a>
