--- a/Feedback.html
+++ b/Feedback.html
@@ -64,6 +64,9 @@
               <a class="nav-link" href="classes.html">Bakery Classes</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact Us</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link active" href="Feedback.html">Feedback</a>
             </li>
           </ul>
