--- a/cakes.html
+++ b/cakes.html
@@ -88,6 +88,7 @@
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="cakes.html">Our Cakes</a></li>
           <li class="nav-item"><a class="nav-link" href="classes.html">Baking Class</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
           <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a></li>
