--- a/about.html
+++ b/about.html
@@ -6,47 +6,10 @@
   <title>About Me - Artisan Bakery</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
-  <!-- Custom CSS -->
   <link rel="stylesheet" type="text/css" href="styles.css">
-
-  <!-- Optional internal style (if not using external stylesheet) -->
-  <style>
-    body {
-      background-color: #ffe4eb; /* Light pink */
-      color: #333;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    nav.navbar-dark {
-      background-color: #C71585 !important; /* Dark pink */
-    }
-
-    nav.navbar-dark .navbar-nav .nav-link {
-      color: #ffffff;
-      font-weight: 600;
-      transition: color 0.3s ease;
-    }
-
-    nav.navbar-dark .navbar-nav .nav-link:hover,
-    nav.navbar-dark .navbar-nav .nav-link:focus {
-      color: #ffb6c1;
-      text-decoration: underline;
-    }
-
-    footer {
-      background-color: #C71585;
-      color: #ffffff;
-      padding: 1rem 0;
-      text-align: center;
-      font-size: 0.9rem;
-      margin-top: 3rem;
-    }
-  </style>
 </head>
 
 <body>
-
-  <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">Artisan Bakery</a>
@@ -67,13 +30,11 @@
     </div>
   </nav>
 
-  <!-- Page Header -->
   <header class="bg-dark text-white text-center p-4 mb-4">
     <h1 class="display-4 fw-bold">About Artisan Bakery</h1>
-    <p class="lead">A journey fueled by tradition, passion, and flavor</p>
+    <p class="lead">A journey fueled by love, passion and zweet treats</p>
   </header>
 
-  <!-- Main Content -->
   <main class="container mb-5">
     <article>
       <div class="row g-4 align-items-center">
@@ -106,8 +67,6 @@
       </section>
     </article>
   </main>
-
-  <!-- Footer -->
   <footer>
     <p class="mb-0">&copy; 2025 Artisan Bakery. All rights reserved.</p>
   </footer>
