--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Artisan Bakery - Cakes Only</title>
-  <!-- Bootstrap CSS -->
+  
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -71,8 +71,8 @@
   </style>
 </head>
 <body>
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg shadow-sm">
+  <!-- Navigation
+  <nav class="nav">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">Artisan Bakery</a>
       <button
@@ -110,8 +110,6 @@
       </div>
     </div>
   </nav>
-
-  <!-- Main Content -->
   <main class="container py-5">
     <div class="row g-4 align-items-center">
       <!-- Text section -->
@@ -140,7 +138,6 @@
     </div>
   </main>
 
-  <!-- Footer -->
   <footer>
     &copy; 2025 Artisan Bakery. All rights reserved.
   </footer>
