--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Artisan Bakery - Contact Us</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <!-- Bootstrap CSS CDN -->
   <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
