--- a/index.html
+++ b/index.html
@@ -36,15 +36,6 @@
       text-decoration: underline;
     }
 
-    footer {
-      background-color: #C71585; /* Dark pink */
-      color: #ffffff;
-      padding: 1rem 0;
-      text-align: center;
-      font-size: 0.9rem;
-      margin-top: 3rem;
-    }
-
     h1 {
       color: #bb2d55;
     }
@@ -70,7 +61,7 @@
     }
   </style>
 </head>
-<body>
+<body class=".body">
   <nav class="nav">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">Artisan Bakery</a>
@@ -137,7 +128,7 @@
     </div>
   </main>
 
-  <footer>
+  <footer class=".footer">
     &copy; 2025 Artisan Bakery. All rights reserved.
   </footer>
 
