--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </style>
 </head>
 <body class=".body">
-  <nav class="nav">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">Artisan Bakery</a>
       <button
@@ -72,23 +72,17 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About Us</a>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="cakes.html">Our Cakes</a>
+          <li class="nav-item"><a class="nav-link" href="cakes.html">Our Cakes</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="classes.html">Baking Class</a>
+          <li class="nav-item"><a class="nav-link" href="classes.html">Baking Class</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Feedback.html">Feedback</a>
+          <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a>
           </li>
         </ul>
       </div>
@@ -122,8 +116,8 @@
     </div>
   </main>
 
-  <footer class=".footer">
-    &copy; 2025 Artisan Bakery. All rights reserved.
+  <footer class="footer">
+   <p>&copy; 2025 Artisan Bakery. All rights reserved.</p>
   </footer>
 
   <!-- Bootstrap JS -->
