--- a/cakes.html
+++ b/cakes.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Artisan Bakery - Cakes Only</title>
-
-  <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -14,12 +12,6 @@
    <link rel="stylesheet" type="text/css" href="styles.css">
 
   <style>
-    body {
-      background-color: #ffe4eb;
-      color: #333;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
     nav.navbar-dark {
       background-color: #2c2f33 !important;
     }
@@ -33,15 +25,6 @@
     nav.navbar-dark .navbar-nav .nav-link:hover {
       color: #ff6384;
       text-decoration: underline;
-    }
-
-    footer {
-      background-color: #2c2f33;
-      color: #ffffff;
-      padding: 1rem 0;
-      text-align: center;
-      font-size: 0.9rem;
-      margin-top: 3rem;
     }
 
     .blog-image {
@@ -76,7 +59,7 @@
 </head>
 <body>
   <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">Artisan Bakery</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -197,8 +180,8 @@
   </main>
 
   <!-- Footer -->
-  <footer>
-    &copy; 2025 Artisan Bakery. All rights reserved.
+  <footer class="footer">
+  <p> &copy; 2025 Artisan Bakery. All rights reserved.</p>
   </footer>
 
   <!-- Bootstrap JS -->
