--- a/classes.html
+++ b/classes.html
@@ -4,48 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Baking Classes - Artisan Bakery</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
   <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1IHdhpC6Ety5qOn+3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous" />
+   <link rel="stylesheet" type="text/css" href="styles.css">
   <style>
-     body {
-      background-color: #ffe4eb; /* Light pink */
-      color: #333;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    nav.navbar-dark {
-      background-color: #C71585 !important; /* Dark pink */
-    }
-
-    nav.navbar-dark .navbar-nav .nav-link {
-      color: #ffffff;
-      font-weight: 600;
-      transition: color 0.3s ease;
-    }
-
-    nav.navbar-dark .navbar-nav .nav-link:hover,
-    nav.navbar-dark .navbar-nav .nav-link:focus {
-      color: #ffb6c1;
-      text-decoration: underline;
-    }
-
-    footer {
-      background-color: #C71585;
-      color: #ffffff;
-      padding: 1rem 0;
-      text-align: center;
-      font-size: 0.9rem;
-      margin-top: 3rem;
-    }
-  
-    body {
-      background: #fff5f8;
-    }
     .section-title {
       text-align: center;
       font-weight: 700;
@@ -223,7 +189,7 @@
     </section>
   </main>
 
-  <footer class="bg-danger text-white text-center py-3 mt-5">
+  <footer class="footer">
     <p class="mb-0">&copy; 2025 Artisan Bakery. All rights reserved.</p>
   </footer>
 
