--- a/cakes.html
+++ b/cakes.html
@@ -3,65 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Artisan Bakery - Cakes Only</title>
+  <title>Artisan Bakery - Our Cakes</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
     crossorigin="anonymous"
   />
    <link rel="stylesheet" type="text/css" href="styles.css">
-
-  <style>
-    nav.navbar-dark {
-      background-color: #2c2f33 !important;
-    }
-
-    nav.navbar-dark .navbar-nav .nav-link {
-      color: #ffffff;
-      font-weight: 600;
-      transition: color 0.3s ease;
-    }
-
-    nav.navbar-dark .navbar-nav .nav-link:hover {
-      color: #ff6384;
-      text-decoration: underline;
-    }
-
-    .blog-image {
-      width: 100%;
-      height: auto;
-      border-radius: 0.5rem;
-      object-fit: cover;
-      box-shadow: 0 4px 8px rgb(0 0 0 / 0.1);
-    }
-
-    .blog-intro {
-      font-size: 1.125rem;
-      line-height: 1.5;
-      color: #4a4a4a;
-      margin-bottom: 1rem;
-    }
-
-    .img-fluid-wrapper {
-      overflow: hidden;
-      border-radius: 0.5rem;
-    }
-
-    h1, h2 {
-      color: #bb2d55;
-    }
-
-    .table thead {
-      background-color: #C71585;
-      color: #fff;
-    }
-  </style>
 </head>
 <body>
-  <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">Artisan Bakery</a>
+      <a class="navbar-brand fw-bold" href="index.html">Artisan Bakery</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
         aria-label="Toggle navigation">
