--- a/about.html
+++ b/about.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Me - Artisan Bakery</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
@@ -32,14 +31,14 @@
 
   <header class="bg-dark text-white text-center p-4 mb-4">
     <h1 class="display-4 fw-bold">About Artisan Bakery</h1>
-    <p class="lead">A journey fueled by love, passion and zweet treats</p>
+    <p class="lead">A journey fueled by love, passion and sweet treats</p>
   </header>
 
   <main class="container mb-5">
     <article>
       <div class="row g-4 align-items-center">
         <div class="col-md-5">
-          <img src="Fresh Bread.jpg" alt="Fresh Bread" class="img-fluid rounded shadow-sm" />
+          <img src="images/Fresh-bread.jpg" alt="Fresh Bread" class="img-fluid rounded shadow-sm" />
         </div>
         <div class="col-md-7">
           <h2 class="mb-3">Our Story</h2>
@@ -67,7 +66,7 @@
       </section>
     </article>
   </main>
-  <footer>
+  <footer class="footer">
     <p class="mb-0">&copy; 2025 Artisan Bakery. All rights reserved.</p>
   </footer>
 
