--- a/Feedback.html
+++ b/Feedback.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Feedback - Artisan Bakery</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <script>
     function handleSubmit(event) {
       event.preventDefault(); // Prevent default form submission
@@ -76,7 +76,7 @@
   </header>
 
   <main class="container my-5">
-    <h2 class="text-center mb-4">We Value Your Feedback!</h2>
+    <h2 class="text-center mb-4"><i class="bi bi-chat-left-heart"></i>We Value Your Feedback!</h2>
     <form id="feedbackForm" onsubmit="handleSubmit(event)" class="p-4 border rounded shadow">
 
       <fieldset class="mb-4">
@@ -135,7 +135,7 @@
    </form>
   </main>
   
-  <footer class="bg-dark text-white text-center py-3 mt-5">
+  <footer class="footer">
     <p>&copy; 2025 Artisan Bakery | All Rights Reserved</p>
   </footer>
 
