--- a/payment.html
+++ b/payment.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Payment - Sweet Sensations Bakery</title>
-  <link rel="stylesheet" href="style.css">
-  <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1IHdhpC6Ety5qOn+3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous" />
+   <link rel="stylesheet" href="styles.css">
   <style>
     body {
       background: #fff0f6;
@@ -40,6 +39,24 @@
   </style>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #C71585;">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="index.html">Artisan Bakery</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="cakes.html">Our Cakes</a></li>
+        <li class="nav-item"><a class="nav-link" href="classes.html">Classes</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
   <div class="payment-container">
     <h2 class="text-center text-danger mb-4">Payment Information</h2>
     <form id="paymentForm" novalidate>
@@ -115,4 +132,8 @@
     });
   </script>
 </body>
+  <footer class="footer">
+  <p class="mb-0">&copy; 2025 Artisan Bakery. All rights reserved.</p>
+</footer>
+
 </html>
