--- a/Feedback.html
+++ b/Feedback.html
@@ -41,9 +41,8 @@
 </head>
 
 <body>
-  
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html"> Artisan Bakery</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -136,7 +135,7 @@
   </main>
   
   <footer class="footer">
-    <p>&copy; 2025 Artisan Bakery | All Rights Reserved</p>
+    <p>&copy; 2025 Artisan Bakery. All Rights Reserved</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
