--- a/cakes.html
+++ b/cakes.html
@@ -7,7 +7,6 @@
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
-    crossorigin="anonymous"
   />
    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -24,7 +23,7 @@
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="cakes.html">Our Cakes</a></li>
+          <li class="nav-item"><a class="nav-link active" href="cakes.html">Our Cakes</a></li>
           <li class="nav-item"><a class="nav-link" href="classes.html">Baking Class</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
           <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a></li>
@@ -32,12 +31,9 @@
       </div>
     </div>
   </nav>
-
-  <!-- Main content -->
   <main class="container py-5">
     <h1 class="mb-4 fw-bold">Our Delicious Cakes</h1>
 
-    <!-- Cake Order Section -->
     <section class="mt-4">
       <h2 class="fw-bold mb-4">Order Your Cake</h2>
       <form action="payment.html" method="GET">
@@ -52,7 +48,7 @@
               </tr>
             </thead>
             <tbody>
-              <!-- Chocolate Cake -->
+              
               <tr>
                 <td>
                   Chocolate Fudge Cake
@@ -69,7 +65,6 @@
                 <td><input type="number" name="qty[]" min="0" value="0" class="form-control" /></td>
               </tr>
 
-              <!-- Red Velvet Cake -->
               <tr>
                 <td>
                   Red Velvet Cake
@@ -86,7 +81,6 @@
                 <td><input type="number" name="qty[]" min="0" value="0" class="form-control" /></td>
               </tr>
 
-              <!-- Vanilla Cake -->
               <tr>
                 <td>
                   Vanilla Rainbow Cake
@@ -111,7 +105,6 @@
       </form>
     </section>
 
-    <!-- Blog/Story Section -->
     <div class="row g-4 align-items-center mt-5">
       <section class="col-lg-7">
         <h2 class="mb-4 fw-bold">The Love for Cakes</h2>
@@ -131,13 +124,11 @@
       </section>
     </div>
   </main>
-
-  <!-- Footer -->
+  
   <footer class="footer">
   <p> &copy; 2025 Artisan Bakery. All rights reserved.</p>
   </footer>
 
-  <!-- Bootstrap JS -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"
