--- a/classes.html
+++ b/classes.html
@@ -4,72 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Baking Classes - Artisan Bakery</title>
-  <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1IHdhpC6Ety5qOn+3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous" />
    <link rel="stylesheet" type="text/css" href="styles.css">
-  <style>
-    .section-title {
-      text-align: center;
-      font-weight: 700;
-      color: #d6336c;
-      margin-bottom: 2rem;
-    }
-    .class-card {
-      background: #fff;
-      border-radius: 12px;
-      padding: 1.5rem;
-      box-shadow: 0 4px 10px rgb(255 105 180 / 0.3);
-      transition: box-shadow 0.3s ease;
-    }
-    .class-card:hover {
-      box-shadow: 0 6px 14px rgb(255 105 180 / 0.6);
-    }
-    .age-note {
-      font-size: 0.9rem;
-      color: #d6336c;
-      font-weight: 600;
-      margin-bottom: 0.75rem;
-    }
-    #quantity-section,
-    #attendee-names-section,
-    #payment-section {
-      max-width: 500px;
-      margin: 2rem auto;
-      padding: 2rem;
-      background: #fff0f6;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgb(255 105 180 / 0.3);
-      display: none;
-    }
-    #confirmation-message {
-      max-width: 500px;
-      margin: 2rem auto;
-      padding: 2rem;
-      background: #e9f7ef;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgb(72 180 97 / 0.3);
-      display: none;
-      text-align: center;
-    }
-    .form-label {
-      font-weight: 600;
-      color: #d6336c;
-    }
-    .why-come-section {
-      max-width: 720px;
-      margin: 0 auto 3rem;
-      font-size: 1.1rem;
-      line-height: 1.6;
-      color: #333;
-    }
-  </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+  <nav class="navbar navbar-expand-lg navbar-dark ">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">Artisan bakery</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -82,7 +23,7 @@
           <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="cakes.html">Our Cakes</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="classes.html">Baking Class</a></li>
+          <li class="nav-item"><a class="nav-link active"href="classes.html">Baking Class</a></li>
           <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a></li>
         </ul>
       </div>
