--- a/contact.html
+++ b/contact.html
@@ -4,50 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Artisan Bakery - Contact Us</title>
-  <!-- Bootstrap CSS CDN -->
   <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1HIklE7xEE7RkJo/14mEjB44h7v7j/tWv+0U4P5KG2n"
-      crossorigin="anonymous"
   />
  <link rel="stylesheet" type="text/css" href="styles.css"> 
-  <style>
-    body {
-    .contact-card {
-      background: #fff0f6;
-      border-radius: 12px;
-      padding: 2rem;
-      box-shadow: 0 4px 10px rgb(0 0 0 / 0.1);
-    }
-    h2 {
-      color: #bb2d55;
-      font-weight: 700;
-      margin-bottom: 1rem;
-    }
-    .warm-message {
-      font-size: 1.2rem;
-      margin-bottom: 1.5rem;
-      color: #4a4a4a;
-    }
-    .contact-details a {
-      color: #bb2d55;
-      font-weight: 600;
-      text-decoration: none;
-    }
-    .contact-details a:hover {
-      text-decoration: underline;
-    }
-    .funny-guide {
-      font-style: italic;
-      color: #888;
-      margin-top: 1.5rem;
-    }
-  </style>
 </head>
 <body>
-  <!-- Navigation bar -->
-  <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">Artisan Bakery</a>
       <button
@@ -67,29 +31,17 @@
       >
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="cakes.html">Our Cakes</a>
-          </li>
-           <li class="nav-item">
-            <a class="nav-link" href="classes.html">Baking Class</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="contact.html">Contact Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Feedback.html">Feedback</a>
-          </li>
+            <a class="nav-link" href="index.html">Home</a> </li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>  </li>
+          <li class="nav-item"><a class="nav-link" href="cakes.html">Our Cakes</a> </li>
+           <li class="nav-item"><a class="nav-link" href="classes.html">Baking Class</a>  </li>
+          <li class="nav-item"><a class="nav-link active"href="contact.html">Contact Us</a>  </li>
+          <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a> </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Main content -->
   <main class="container py-5">
     <div class="row justify-content-center">
       <section class="col-md-8 contact-card">
@@ -107,13 +59,11 @@
       </section>
     </div>
   </main>
-
-  <!-- Footer -->
-  <footer>
+  
+  <footer class="footer">
     &copy; 2025 Artisan Bakery. All rights reserved.
   </footer>
 
-  <!-- Bootstrap JS CDN with Popper -->
   <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-qQ5eQmWQbbuKfN1T8ulpGQafhDbj2jgPru63Fy6uQlO07D0Le9qBUU7toIbHIsdM"
