--- a/index.html
+++ b/index.html
@@ -3,57 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Artisan Bakery - Cakes Only</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>Artisan Bakery - Home Page</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1HIklE7xEE7RkJo/14mEjB44h7v7j/tWv+0U4P5KG2n"
-    crossorigin="anonymous"
   />
-  <style>
-    nav.navbar {
-      position: relative;
-      background-color: #C71585; /* Dark pink */
-    }
-
-    nav.navbar .navbar-brand,
-    nav.navbar .nav-link {
-      color: #fff;
-      font-weight: 600;
-      transition: color 0.3s ease;
-    }
-
-    nav.navbar .nav-link:hover,
-    nav.navbar .nav-link:focus {
-      color: #ffb6c1; /* Light pink on hover */
-      text-decoration: underline;
-    }
-
-    h1 {
-      color: #bb2d55;
-    }
-
-    .blog-image {
-      width: 100%;
-      height: auto;
-      border-radius: 0.5rem;
-      object-fit: cover;
-      box-shadow: 0 4px 8px rgb(0 0 0 / 0.1);
-    }
-
-    .blog-intro {
-      font-size: 1.125rem;
-      line-height: 1.5;
-      color: #4a4a4a;
-      margin-bottom: 1rem;
-    }
-
-    .img-fluid-wrapper {
-      overflow: hidden;
-      border-radius: 0.5rem;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  
 </head>
 <body class=".body">
   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -72,25 +28,19 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="cakes.html">Our Cakes</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="classes.html">Baking Class</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a> </li>
+          <li class="nav-item"><a class="nav-link" href="cakes.html">Our Cakes</a></li>
+          <li class="nav-item"><a class="nav-link" href="classes.html">Baking Class</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a> </li>
         </ul>
       </div>
     </div>
   </nav>
   <main class="container py-5">
     <div class="row g-4 align-items-center">
-      <!-- Text section -->
+      
       <section class="col-lg-7">
         <h1 class="mb-4 fw-bold">The Love for Cakes</h1>
         <p class="blog-intro">
@@ -105,7 +55,7 @@
           craftsmanship.
         </p>
       </section>
-      <!-- Image section -->
+  
       <section class="col-lg-5 img-fluid-wrapper">
         <img
           src="https://images.unsplash.com/photo-1543779505-9b8b9b4eda51?auto=format&fit=crop&w=800&q=80"
