--- a/payment.html
+++ b/payment.html
@@ -3,43 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Payment - Sweet Sensations Bakery</title>
+  <title>Payment - Artisan Bakery</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1IHdhpC6Ety5qOn+3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous" />
+/>
    <link rel="stylesheet" href="styles.css">
-  <style>
-    body {
-      background: #fff0f6;
     }
-    .payment-container {
-      max-width: 600px;
-      margin: 4rem auto;
-      background: #fff;
-      padding: 2.5rem;
-      border-radius: 12px;
-      box-shadow: 0 6px 15px rgb(255 105 180 / 0.3);
-    }
-    #thank-you-message {
-      display: none;
-      text-align: center;
-      padding: 2rem;
-      background: #e9f7ef;
-      border-radius: 12px;
-      box-shadow: 0 6px 15px rgb(72 180 97 / 0.3);
-      font-size: 1.25rem;
-      color: #198754;
-    }
-    .form-label {
-      font-weight: 600;
-      color: #d6336c;
-    }
-  </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #C71585;">
+  <nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container">
     <a class="navbar-brand fw-bold" href="index.html">Artisan Bakery</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -50,9 +23,11 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
         <li class="nav-item"><a class="nav-link" href="cakes.html">Our Cakes</a></li>
-        <li class="nav-item"><a class="nav-link" href="classes.html">Classes</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="classes.html">Bakery Classes</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a></li>
       </ul>
     </div>
   </div>
