--- a/index.html
+++ b/index.html
@@ -63,18 +63,41 @@
           class="blog-image img-fluid"
         />
       </section>
+      <section class="container my-5">
+  <h2 class="text-center mb-4">Explore More</h2>
+  <div class="row g-4">
+    <!-- Link to Baking Classes -->
+    <div class="col-md-6">
+      <a href="classes.html" class="text-decoration-none">
+        <img
+          src="images/bakery-class.jpg"
+          alt="Baking Class"
+          class="img-fluid rounded shadow-sm w-100"
+          style="height: 250px; object-fit: cover;"
+        />
+        <h5 class="text-center mt-3 text-dark">Join a Baking Class</h5>
+      </a>
+    </div>
+
+    <div class="col-md-6">
+      <a href="cakes.html" class="text-decoration-none">
+        <img
+          src="images/red-velvet-cupcakes.jpg"
+          alt="Our Cakes"
+          class="img-fluid rounded shadow-sm w-100"
+          style="height: 250px; object-fit: cover;"
+        />
+        <h5 class="text-center mt-3 text-dark">View Our Cakes</h5>
+      </a>
+    </div>
+  </div>
+</section>
+
     </div>
   </main>
 
   <footer class="footer">
    <p>&copy; 2025 Artisan Bakery. All rights reserved.</p>
   </footer>
-
-  <!-- Bootstrap JS -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-qQ5eQmWQbbuKfN1T8ulpGQafhDbj2jgPru63Fy6uQlO07D0Le9qBUU7toIbHIsdM"
-    crossorigin="anonymous"
-  ></script>
 </body>
 </html>
