--- a/cakes.html
+++ b/cakes.html
@@ -104,6 +104,90 @@
         </button>
       </form>
     </section>
+<section class="mt-5">
+  <h2 class="fw-bold mb-4">Explore More Treats</h2>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    
+    <div class="col">
+      <div class="card h-100">
+        <img src="Cookies.jpg" class="card-img-top" alt="Cookies">
+        <div class="card-body">
+          <h5 class="card-title">Homemade Cookies</h5>
+          <select class="form-select mb-2">
+            <option>Small Pack - P30</option>
+            <option>Medium Pack - P50</option>
+            <option>Large Pack - P70</option>
+          </select>
+          <input type="number" class="form-control mb-2" min="1" value="1" placeholder="Qty">
+          <a href="payment.html" class="btn btn-danger w-100">Buy Now</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100">
+        <img src="Wedding-cake.jpg" class="card-img-top" alt="Wedding Cake">
+        <div class="card-body">
+          <h5 class="card-title">Wedding Cake</h5>
+          <select class="form-select mb-2">
+            <option>2 Tier - P450</option>
+            <option>3 Tier - P700</option>
+            <option>Custom - P1000+</option>
+          </select>
+          <input type="number" class="form-control mb-2" min="1" value="1" placeholder="Qty">
+          <a href="payment.html" class="btn btn-danger w-100">Buy Now</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100">
+        <img src="Birthday-Cake.jpg" class="card-img-top" alt="Birthday Cake">
+        <div class="card-body">
+          <h5 class="card-title">Birthday Cake</h5>
+          <select class="form-select mb-2">
+            <option>Small - P120</option>
+            <option>Medium - P180</option>
+            <option>Large - P250</option>
+          </select>
+          <input type="number" class="form-control mb-2" min="1" value="1" placeholder="Qty">
+          <a href="payment.html" class="btn btn-danger w-100">Buy Now</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100">
+        <img src="Cupcakes.jpg" class="card-img-top" alt="Cupcakes">
+        <div class="card-body">
+          <h5 class="card-title">Cupcakes (6 pack)</h5>
+          <select class="form-select mb-2">
+            <option>Basic - P60</option>
+            <option>Decorated - P90</option>
+          </select>
+          <input type="number" class="form-control mb-2" min="1" value="1" placeholder="Qty">
+          <a href="payment.html" class="btn btn-danger w-100">Buy Now</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100">
+        <img src="Bread-loaf.jpg" class="card-img-top" alt="Bread">
+        <div class="card-body">
+          <h5 class="card-title">Fresh Bread Loaf</h5>
+          <select class="form-select mb-2">
+            <option>Plain - P25</option>
+            <option>Seeded - P30</option>
+            <option>Garlic - P35</option>
+          </select>
+          <input type="number" class="form-control mb-2" min="1" value="1" placeholder="Qty">
+          <a href="payment.html" class="btn btn-danger w-100">Buy Now</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <div class="row g-4 align-items-center mt-5">
       <section class="col-lg-7">
@@ -128,10 +212,5 @@
   <footer class="footer">
   <p> &copy; 2025 Artisan Bakery. All rights reserved.</p>
   </footer>
-
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    crossorigin="anonymous"
-  ></script>
 </body>
 </html>
