--- a/classes.html
+++ b/classes.html
@@ -6,7 +6,7 @@
   <title>Baking Classes - Artisan Bakery</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
+    rel="stylesheet"/>
    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
