--- a/classes.html
+++ b/classes.html
@@ -53,6 +53,16 @@
       <h2 class="section-title">Our Classes & Pricing</h2>
       <div class="row g-4">
         <div class="col-md-6">
+  <div class="class-card d-flex flex-column h-100">
+    <div class="age-note">For ages 16 and above</div>
+    <h3>Baking Cakes for Beginners</h3>
+    <p>Start your cake-baking journey with simple recipes, mixing tips, and sponge mastery in this beginner-friendly class.</p>
+    <p class="fw-bold text-danger">P600 per person</p>
+    <button class="btn btn-danger mt-auto buy-btn" data-name="Baking Cakes for Beginners" data-price="60">Book Now</button>
+  </div>
+</div>
+
+        <div class="col-md-6">
           <div class="class-card d-flex flex-column h-100">
             <div class="age-note">For ages 16 and above</div>
             <h3>Beginner's Cupcake Workshop</h3>
