--- a/cakes.html
+++ b/cakes.html
@@ -110,7 +110,7 @@
     
     <div class="col">
       <div class="card h-100">
-        <img src="Cookies.jpg" class="card-img-top" alt="Cookies">
+        <img src="images/Cookies.jpg" class="card-img-top" alt="Cookies">
         <div class="card-body">
           <h5 class="card-title">Homemade Cookies</h5>
           <select class="form-select mb-2">
@@ -126,7 +126,7 @@
 
     <div class="col">
       <div class="card h-100">
-        <img src="Wedding-cake.jpg" class="card-img-top" alt="Wedding Cake">
+        <img src="images/Wedding-cake.jpg" class="card-img-top" alt="Wedding Cake">
         <div class="card-body">
           <h5 class="card-title">Wedding Cake</h5>
           <select class="form-select mb-2">
@@ -142,7 +142,7 @@
 
     <div class="col">
       <div class="card h-100">
-        <img src="Birthday-Cake.jpg" class="card-img-top" alt="Birthday Cake">
+        <img src="images/Birthday-Cake.jpg" class="card-img-top" alt="Birthday Cake">
         <div class="card-body">
           <h5 class="card-title">Birthday Cake</h5>
           <select class="form-select mb-2">
@@ -158,7 +158,7 @@
 
     <div class="col">
       <div class="card h-100">
-        <img src="Cupcakes.jpg" class="card-img-top" alt="Cupcakes">
+        <img src="images/Cupcakes.jpg" class="card-img-top" alt="Cupcakes">
         <div class="card-body">
           <h5 class="card-title">Cupcakes (6 pack)</h5>
           <select class="form-select mb-2">
@@ -173,7 +173,7 @@
 
     <div class="col">
       <div class="card h-100">
-        <img src="Bread-loaf.jpg" class="card-img-top" alt="Bread">
+        <img src="images/Bread-loaf.jpg" class="card-img-top" alt="Bread">
         <div class="card-body">
           <h5 class="card-title">Fresh Bread Loaf</h5>
           <select class="form-select mb-2">
