--- a/cakes.html
+++ b/cakes.html
@@ -142,7 +142,7 @@
 
     <div class="col">
       <div class="card h-100">
-        <img src="images/Birthday-Cake.jpg" class="card-img-top" alt="Birthday Cake">
+        <img src="images/Birthday-cake.jpg" class="card-img-top" alt="Birthday Cake">
         <div class="card-body">
           <h5 class="card-title">Birthday Cake</h5>
           <select class="form-select mb-2">
