--- a/classes.html
+++ b/classes.html
@@ -30,7 +30,7 @@
     </div>
   </nav>
 
-  <header class="bg-danger text-white text-center p-4 mb-4">
+  <header class="bg-dark text-white text-center p-4 mb-4">
     <h1 class="display-4 fw-bold">Physical Baking Classes</h1>
     <p class="lead">For ages 16 and above. Learn, bake, and have fun with Artisan Bakery!</p>
   </header>
