--- a/about.html
+++ b/about.html
@@ -43,7 +43,8 @@
         <div class="col-md-7">
           <h2 class="mb-3">Our Story</h2>
           <p>
-            My baking journey began when I was just 10 years old, standing beside my grandmother in her cozy kitchen...
+            My baking journey began when I was just 10 years old, standing beside my grandmother in her cozy kitchen during school holidays ...
+            Oh how I loved visiting her in a small village called Kumakwane.
           </p>
           <p>
             The recipes I cherish are time-tested treasures, handed down through my family...
