--- a/classes.html
+++ b/classes.html
@@ -10,25 +10,25 @@
    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark ">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">Artisan bakery</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto fw-semibold">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="cakes.html">Our Cakes</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-          <li class="nav-item"><a class="nav-link active"href="classes.html">Baking Class</a></li>
-          <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a></li>
-        </ul>
-      </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="index.html">Artisan Bakery</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav fw-semibold">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="cakes.html">Our Cakes</a></li>
+        <li class="nav-item"><a class="nav-link" href="classes.html">Baking Class</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a></li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <header class="bg-dark text-white text-center p-4 mb-4">
     <h1 class="display-4 fw-bold">Physical Baking Classes</h1>
@@ -140,16 +140,6 @@
     </section>
   </main>
 
-  <footer class="footer">
-    <p class="mb-0">&copy; 2025 Artisan Bakery. All rights reserved.</p>
-  </footer>
-
-  <!-- Bootstrap JS Bundle -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+6q8bY81QANwvN64/yPp6vsu6i4+"
-    crossorigin="anonymous"></script>
-
   <script>
     const buyButtons = document.querySelectorAll('.buy-btn');
     const quantitySection = document.getElementById('quantity-section');
@@ -168,7 +158,6 @@
     let selectedPrice = 0;
     let selectedQuantity = 1;
 
-    // Initially hide all steps except class selection
     quantitySection.style.display = 'none';
     attendeeNamesSection.style.display = 'none';
     paymentSection.style.display = 'none';
@@ -205,7 +194,7 @@
         alert('Please enter a valid quantity (1 or more).');
         return;
       }
-      // Generate input fields for attendees' names
+      
       attendeesContainer.innerHTML = '';
       for(let i = 1; i <= selectedQuantity; i++) {
         const div = document.createElement('div');
@@ -224,7 +213,6 @@
       window.scrollTo({top: 0, behavior: 'smooth'});
     });
 
-    // Back button in attendee names form to quantity selection
     document.getElementById('backToQuantity')?.addEventListener('click', () => {
       attendeeNamesSection.style.display = 'none';
       quantitySection.style.display = 'block';
@@ -236,7 +224,6 @@
     attendeeNamesForm.addEventListener('submit', (e) => {
       e.preventDefault();
 
-      // Validate attendee names
       const inputs = attendeesContainer.querySelectorAll('input');
       for(const input of inputs) {
         if (!input.value.trim()) {
@@ -254,7 +241,6 @@
     paymentForm.addEventListener('submit', (e) => {
       e.preventDefault();
 
-      // Simple validation (HTML5 required fields)
       const fullName = document.getElementById('fullName').value.trim();
       const email = document.getElementById('email').value.trim();
       const phone = document.getElementById('phone').value.trim();
@@ -269,7 +255,6 @@
       paymentSection.style.display = 'none';
       confirmationSection.style.display = 'block';
 
-      // Get attendee names to show summary
      let attendeesList = '';
 const inputs = attendeesContainer.querySelectorAll('input');
 inputs.forEach((input, i) => {
@@ -287,7 +272,6 @@ confirmationSection.innerHTML = `
 `;
       window.scrollTo({top: 0, behavior: 'smooth'});
 
-      // Attach event listener to new booking button
       document.getElementById('newBookingBtn').addEventListener('click', resetAll);
     });
 
@@ -305,7 +289,15 @@ confirmationSection.innerHTML = `
       window.scrollTo({top: 0, behavior: 'smooth'});
     }
   </script>
-</body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+6q8bY81QANwvN64/yPp6vsu6i4+"
+  crossorigin="anonymous"></script>
+
+ <footer class="footer">
+    <p class="mb-0">&copy; 2025 Artisan Bakery. All rights reserved.</p>
+  </footer>      
+</body> 
 </html>
 
       
