--- a/cakes.html
+++ b/cakes.html
@@ -110,7 +110,7 @@
 
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="images/cookies.jpg" class="card-img-top" alt="Homemade Cookies">
+          <img src="images/Cookies.jpg" class="card-img-top" alt="Homemade Cookies">
           <div class="card-body">
             <h5 class="card-title">Homemade Cookies</h5>
             <p>P30 per pack</p>
@@ -121,7 +121,7 @@
 
       <div class="col-md-4 order-md-last">
         <div class="card h-100">
-          <img src="images/cupcakes.jpg" class="card-img-top" alt="Cupcakes">
+          <img src="images/Cupcakes.jpg" class="card-img-top" alt="Cupcakes">
           <div class="card-body">
             <h5 class="card-title">Cupcakes</h5>
             <p>P20 each</p>
@@ -132,7 +132,7 @@
       
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="images/weddingcake.jpg" class="card-img-top" alt="Wedding Cake">
+          <img src="images/Wedding-cake.jpg" class="card-img-top" alt="Wedding Cake">
           <div class="card-body">
             <h5 class="card-title">Wedding Cake</h5>
             <p>P500 each</p>
@@ -143,7 +143,7 @@
 
       <div class="col-md-4 order-md-first">
         <div class="card h-100">
-          <img src="images/bread.jpg" class="card-img-top" alt="Bread Loaf">
+          <img src="images/Bread-loaf.jpg" class="card-img-top" alt="Bread Loaf">
           <div class="card-body">
             <h5 class="card-title">Bread Loaf</h5>
             <p>P25 each</p>
@@ -154,7 +154,7 @@
 
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="images/birthdaycake.jpg" class="card-img-top" alt="Birthday Cake">
+          <img src="images/Birthday-cake.jpg" class="card-img-top" alt="Birthday Cake">
           <div class="card-body">
             <h5 class="card-title">Birthday Cake</h5>
             <p>P300 each</p>
